<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorsplash"
    android:visibility="visible"
    tools:context=".GetStarted">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shape"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="463dp"
        android:layout_above="@id/contGetStarted"
        android:layout_marginBottom="-15dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/about_aid_id"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contGetStarted"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGo"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/get_started"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="50dp"
            app:backgroundTint="@color/colorTosca"/>

    </LinearLayout>

</RelativeLayout>